fix: visibility of plusSvg

--- a/packages/knowledge-base/Resources/Public/Css/Backend.css
+++ b/packages/knowledge-base/Resources/Public/Css/Backend.css
@@ -36,6 +36,7 @@
 .tree-header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 8px 12px;
     border-bottom: 1px solid #c3c3c3;
 }
@@ -51,7 +52,7 @@
 .item-wrapper {
     display: flex;
     flex-direction: column;
-    margin: 10px 0;
+    margin-bottom: 10px;
 }
 
 .item {
@@ -86,12 +87,15 @@
     display: flex;
     align-items: center;
     padding: 2px;
-    opacity: 0;
     transition: opacity 0.2s;
 }
 
 .item:hover .basic-button {
     opacity: 1;
+}
+
+.item .basic-button {
+    opacity: 0;
 }
 
 .basic-button svg {
